--- a/HTracker/HTracker/Views/MainView.axaml
+++ b/HTracker/HTracker/Views/MainView.axaml
@@ -14,20 +14,37 @@
 	<TabControl>
 		<TabItem Header="Tracker">
 			<Grid RowDefinitions="*, auto auto" ShowGridLines="True">
-				
+				<ListBox Grid.Row="0">
+					<ListBoxItem>
+						<Grid ColumnDefinitions="auto, auto">
+							<Label Grid.Column="0">Current day: </Label>
+							<Label Grid.Column="1" Content="{Binding CurrentDay}"></Label>
+						</Grid>
+					</ListBoxItem>
+					<ListBoxItem Content="Days left:">
+						<Grid ColumnDefinitions="auto, auto">
+							<Label Grid.Column="0">Days remaining: </Label>
+							<Label Grid.Column="1" Content="{Binding DaysRemaining}"></Label>
+						</Grid>
+					</ListBoxItem>
+					<ListBoxItem Content="Day count:">
+						<Grid ColumnDefinitions="auto, auto">
+							<Label Grid.Column="0">Days count: </Label>
+							<Label Grid.Column="1" Content="{Binding DaysCount}"></Label>
+						</Grid>
+					</ListBoxItem>
+				</ListBox>
 			</Grid>		
 		</TabItem>
 
 		<TabItem Header="Setup">
 			<Grid RowDefinitions="auto, auto, auto, *, auto">
-				<TextBox Grid.Row="0" Watermark="How many days" Text="{Binding DaysInput}" Margin="0 10 0 0" Background="#FF00FF">
-					<TextBox.InnerRightContent>
-						<Button>Add</Button>	
-					</TextBox.InnerRightContent>
+				<TextBox Grid.Row="0" Watermark="How many days" Text="{Binding DaysCount}" Margin="0 10 0 0" Background="#FF00FF">
 				</TextBox>
 				<Label Grid.Row="2" HorizontalContentAlignment="Center" Margin="0 5">Add new habit</Label>
 				<TextBox Grid.Row="3" Watermark="Add new item" Background="#FF00FF"></TextBox>
-				<Button Grid.Row="4" HorizontalAlignment="Center" Margin="0 10">Add</Button>
+				<Button Grid.Row="4"  HorizontalAlignment="Center" Margin="0 10">Add</Button>
+				<Button Grid.Row="4" HorizontalAlignment="Right">Reset All</Button>		
 			</Grid>
 		</TabItem>
 	</TabControl>
