--- a/HTracker/HTracker/Views/MainView.axaml
+++ b/HTracker/HTracker/Views/MainView.axaml
@@ -15,13 +15,13 @@
 		<TabItem Header="Tracker">
 			<Grid RowDefinitions="*, auto auto" ShowGridLines="True">
 				<ListBox Grid.Row="0">
-					<ListBoxItem>
+					<ListBoxItem Background="#FF00FF">
 						<Grid ColumnDefinitions="auto, auto">
 							<Label Grid.Column="0">Current day: </Label>
 							<Label Grid.Column="1" Content="{Binding CurrentDay}"></Label>
 						</Grid>
 					</ListBoxItem>
-					<ListBoxItem Content="Days left:">
+					<ListBoxItem Content="Days left:" Background="#FF00FF">
 						<Grid ColumnDefinitions="auto, auto">
 							<Label Grid.Column="0">Days remaining: </Label>
 							<Label Grid.Column="1" Content="{Binding DaysRemaining}"></Label>
@@ -34,12 +34,13 @@
 						</Grid>
 					</ListBoxItem>
 				</ListBox>
+				<ItemsControl></ItemsControl>
 			</Grid>		
 		</TabItem>
 
 		<TabItem Header="Setup">
 			<Grid RowDefinitions="auto, auto, auto, *, auto">
-				<TextBox Grid.Row="0" Watermark="How many days" Text="{Binding DaysCount}" Margin="0 10 0 0" Background="#FF00FF">
+				<TextBox Grid.Row="0" Watermark="How many days" Text="{Binding DaysCount}" Margin="0 10 0 0">
 				</TextBox>
 				<Label Grid.Row="2" HorizontalContentAlignment="Center" Margin="0 5">Add new habit</Label>
 				<TextBox Grid.Row="3" Watermark="Add new item" Background="#FF00FF"></TextBox>
