--- a/HTracker/HTracker/Views/MainView.axaml
+++ b/HTracker/HTracker/Views/MainView.axaml
@@ -15,7 +15,7 @@
 	<TabControl>
 		<!--TRACKER-->
 		<TabItem Header="Tracker">
-			<Grid RowDefinitions="auto, auto, *" ShowGridLines="True"> <!--1. Dny, 2. habit list-->
+			<Grid RowDefinitions="auto, *, auto" ShowGridLines="True"> <!--1. Dny, 2. habit list-->
 				<!--Dny stats-->
 				<ListBox Grid.Row="0" Background="#F0FF"  Margin="0 0 0 10">
 					<ListBoxItem Background="#FF00FF">
@@ -38,21 +38,17 @@
 					</ListBoxItem>
 				</ListBox>
 				<!--Habit list-->
-				<ItemsControl ItemsSource="{Binding HabitCollection}" Grid.Row="1" Margin="0 0 0 10">
-					<ItemsControl.ItemTemplate>
-						<DataTemplate DataType="{x:Type model:Habit}">
-							<CheckBox Content="{Binding content}" IsChecked="{Binding isCompleted}" Checked=""></CheckBox>
-						</DataTemplate>
-					</ItemsControl.ItemTemplate>
-				</ItemsControl>
-				<!--Already Completed-->
-				<ItemsControl ItemsSource="{Binding HabitCollection">
-					<ItemsControl.ItemTemplate>
-						<DataTemplate DataType="{x:Type model:Habit">
-							<Label Content="{Binding content}"></Label>
-						</DataTemplate>
-					</ItemsControl.ItemTemplate>
-				</ItemsControl>
+				<ScrollViewer Grid.Row="1">
+					<ItemsControl ItemsSource="{Binding HabitCollection}" Margin="0 0 0 10">
+						<ItemsControl.ItemTemplate>
+							<DataTemplate DataType="{x:Type model:Habit}">
+								<CheckBox Content="{Binding content}" IsChecked="{Binding isCompleted}" Checked=""></CheckBox>
+							</DataTemplate>
+						</ItemsControl.ItemTemplate>
+					</ItemsControl>
+				</ScrollViewer>
+				<!--Save-->
+				<Button Command="{Binding SaveAll}" Grid.Row="2" HorizontalAlignment="Center" Margin="0 10">Save</Button>
 			</Grid>		
 		</TabItem>
 		<!--SETUP-->
