dataManager class, save data on app exit
Redoing the saving and loading data into class for better scalebility, better looking optimized clean code

--- a/HTracker/HTracker/Views/MainView.axaml
+++ b/HTracker/HTracker/Views/MainView.axaml
@@ -42,7 +42,7 @@
 					<ItemsControl ItemsSource="{Binding HabitCollection}" Margin="0 0 0 10">
 						<ItemsControl.ItemTemplate>
 							<DataTemplate DataType="{x:Type model:Habit}">
-								<CheckBox Content="{Binding content}" IsChecked="{Binding isCompleted}" Checked=""></CheckBox>
+								<CheckBox Content="{Binding content}" IsChecked="{Binding isCompleted}"></CheckBox>
 							</DataTemplate>
 						</ItemsControl.ItemTemplate>
 					</ItemsControl>
