--- a/HTracker/HTracker/Views/MainView.axaml
+++ b/HTracker/HTracker/Views/MainView.axaml
@@ -18,7 +18,7 @@
 			<Grid RowDefinitions="auto, *, auto" ShowGridLines="True"> <!--1. Dny, 2. habit list-->
 				<!--Dny stats-->
 				<ListBox Grid.Row="0" Margin="0 0 0 10">
-					<ListBoxItem Background="#FF00FF">
+					<ListBoxItem>
 						<Grid ColumnDefinitions="auto, auto">
 							<Label Grid.Column="0">Current day: </Label>
 							<Label Grid.Column="1" Content="{Binding CurrentDay}"></Label>
